--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "migration:write": "node api/migration/courses.js"
   },
   "keywords": [
     "node",
@@ -24,6 +25,6 @@
   },
   "devDependencies": {
     "body-parser": "^1.20.2",
-    "cors": "^2.8.5"
+    "dotenv": "^16.4.5"
   }
 }
