--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
+    "start": "NODE_ENV=development nodemon server.js",
     "migration:write": "node api/migration/courses.js"
   },
   "keywords": [
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "custom-env": "^2.0.2",
     "express": "^4.18.3",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
@@ -25,7 +26,6 @@
     "nodemon": "^3.1.0"
   },
   "devDependencies": {
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.4.5"
+    "body-parser": "^1.20.2"
   }
 }
