--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "NODE_ENV=production nodemon server.js",
+    "heroku-postbuild": "NODE_ENV=production ng build --prod",
     "start": "NODE_ENV=development nodemon server.js",
     "migration:write": "node api/migration/courses.js"
   },
