change name project

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rest-shop",
+  "name": "phong-lam-be",
   "version": "1.0.0",
   "description": "A node.js RESTful API tutorial project (Build a simple shop API)",
   "main": "index.js",
