--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.0",
     "nodemailer": "^6.9.13",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "body-parser": "^1.20.2"
